src/main/java/com/mua/antlr/Json.g4
grammar Json;

json : value ;

obj : '{' pairSet '}'
    | '{' '}' ;

pairSet : pair
        | pair ',' pairSet;

pair : STRING ':' value ;

arr : '[' valueSet ']'
    | '[' ']';

valueSet : value
           | value ',' valueSet;

value: STRING | NUMBER | obj | arr | bool ;

bool : 'true' | 'false';

STRING: '"' (ESC | SAFECODEPOINT)* '"';

fragment ESC: '\\' (["\\/bfnrt] | UNICODE);

fragment UNICODE: 'u' HEX HEX HEX HEX;

fragment HEX: [0-9a-fA-F];

fragment SAFECODEPOINT: ~ ["\\\u0000-\u001F];

NUMBER: '-'? INT ('.' [0-9] +)? EXP?;

fragment INT: '0' | [1-9] [0-9]*;

fragment EXP: [Ee] [+\-]? INT;

WS: [ \t\n\r] + -> skip;
